--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,12 @@
+v0.1.6a, 20 September 2017
+ * Improved test: test_json_response
+ * Several other test improvements
+ * Data update
+ * Made 'indicator' fields 'definition_id' and '<level1-3_id>' not nullable.
+ * Changed standard date format to %m-%Y.
+ * Bugfix: Datalab/data multiple values were being returned when only a single
+ one should have been for a given country/survey-round/indicator/charGrp/char
+
 v0.1.6, 14 September 2017
  * Send back datalab/init data for query parameters to /datalab/data
  * Update documentation with overTime and format=csv
