--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,6 +6,8 @@ v0.1.6a, 20 September 2017
  * Changed standard date format to %m-%Y.
  * Bugfix: Datalab/data multiple values were being returned when only a single
  one should have been for a given country/survey-round/indicator/charGrp/char
+ * Fixed sorting issues for: indicator, indicator category, characteristic,
+ characteristic category, geography (national vs not), survey round.
 
 v0.1.6, 14 September 2017
  * Send back datalab/init data for query parameters to /datalab/data
