--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,6 @@
+v0.1.6b, 22 September 2017
+ * Data updates.
+
 v0.1.6a, 20 September 2017
  * Improved test: test_json_response
  * Several other test improvements
